--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "vmware-github-projects",
+  "name": "git-projects-app",
   "version": "0.0.0",
   "license": "MIT",
-  "homepage": "https://github.com/vikramsinghvirdi/project-list-app",
+  "homepage": "https://github.com/vikramsinghvirdi/git-projects-app",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --prod",
+    "deploy": "gh-pages -d dist",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -23,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
+    "gh-pages": "^2.1.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
