--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@clr/angular": "^2.3.2",
     "@clr/icons": "^2.3.2",
     "@clr/ui": "^2.3.2",
+    "@webcomponents/custom-elements": "^1.0.0",
     "gh-pages": "^2.1.1",
+    "ng-connection-service": "^1.0.4",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
