--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "deploy": "gh-pages -d dist",
+    "deploy": "gh-pages -d dist/git-projects-app",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
