--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@webcomponents/custom-elements": "^1.0.0",
     "gh-pages": "^2.1.1",
     "ng-connection-service": "^1.0.4",
+    "ngx-content-loading": "^0.1.3",
+    "ngx-infinite-scroll": "^8.0.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
